Make screen only media query optional for all grid classes

--- a/flexboxgrid.scss
+++ b/flexboxgrid.scss
@@ -18,6 +18,8 @@ $flexboxgrid-breakpoints:
   md 62em 61rem,
   lg 75em 71rem !default;
 $flexboxgrid-max-width: 1200px !default;
+// Use screen only media query for all grid classes
+$flexboxgrid-media-screen-only: true !default;
 
 //
 // -- Stop editing -- //
@@ -147,7 +149,7 @@ $name: xs;
   $name: nth($breakpoint, 1);
   $size: nth($breakpoint, 2);
   $container: nth($breakpoint, 3);
-  @media only screen and (min-width: $size) {
+  @media #{if($flexboxgrid-media-screen-only, "only screen and (min-width: #{$size})", "(min-width: #{$size})")} {
     .container {
       width: $container;
     }
